--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,9 +41,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    #App\ControllerApi\:
-    #    resource: '../src/ControllerApi'
-    #    tags: ['controller.service_arguments']
+    App\ControllerApi\:
+        resource: '../src/ControllerApi'
+        tags: ['controller.service_arguments']
 
     App\Repository\:
         resource: '../src/Repository'
