--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -7,7 +7,8 @@ fos_rest:
     format_listener:
         rules:
             - { path: '^/api', priorities: [ json ], fallback_format: json, prefer_extension: true }
-    param_fetcher_listener: true
+    param_fetcher_listener:
+        enabled: true
     access_denied_listener:
         json: true
     view:
