--- a/.env.dist
+++ b/.env.dist
@@ -62,3 +62,9 @@ GOOGLE_PUBLIC=
 GOOGLE_SECRET=
 FACEBOOK_APP_ID=
 FACEBOOK_SECRET_ID=
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=4a651bce78ab05a0211ab3c97b355760
+###< lexik/jwt-authentication-bundle ###
