--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+api_auth_login:
+    path: /api/auth/login
+    methods:  [POST]
+
