Add Doctrine package + fix

--- a/.env.dist
+++ b/.env.dist
@@ -13,6 +13,9 @@ TRUSTED_HOSTS=localhost
 MEMCACHED_URL=memcached://memcached:11211
 ###< symfony/framework-bundle ###
 
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name"
+###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
@@ -32,6 +35,11 @@ SSL_CERTIFICATE_KEY=/path/to/localhost.key
 ELK_HOST=
 ELK_PORT=
 UID=1000
+MYSQL_ROOT_PASSWORD=changeme
+MYSQL_DATABASE=db_name
+MYSQL_USER=db_user
+MYSQL_PASSWORD=db_password
+MYSQL_PORT=3306
 
 ### > Astrobin ###
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
