--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,16 +85,16 @@ services:
     # MySQL
     mysql:
         image: mysql:5.7
+        command: ["--default-authentication-plugin=mysql_native_password"]
         container_name: dso_mysql
-        hostname: mysql
         restart: always
         volumes:
             - mysql_data:/var/lib/mysql
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_USER: ${MYSQL_USER}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+            - MYSQL_DATABASE=${MYSQL_DATABASE}
+            - MYSQL_USER=${MYSQL_USER}
+            - MYSQL_PASSWORD=${MYSQL_PASSWORD}
         ports:
           - 3307:3306
         networks:
