Test docker xcontainer mysql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
         hostname: mysql
         restart: always
         volumes:
-            - mysql-data:/var/lib/mysql:rw
+            - mysql_data:/var/lib/mysql:rw
         environment:
             - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
             - MYSQL_DATABASE=${MYSQL_DATABASE}
