--- a/.env.dist
+++ b/.env.dist
@@ -14,7 +14,7 @@ MEMCACHED_URL=memcached://memcached:11211
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name"
+DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database/${MYSQL_DATABASE}"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
