Change param doctrine

--- a/.env.dist
+++ b/.env.dist
@@ -35,11 +35,12 @@ SSL_CERTIFICATE_KEY=/path/to/localhost.key
 ELK_HOST=
 ELK_PORT=
 UID=1000
-MYSQL_ROOT_PASSWORD=changeme
-MYSQL_DATABASE=db_name
-MYSQL_USER=db_user
-MYSQL_PASSWORD=db_password
-MYSQL_PORT=3306
+DB_ROOT_PASSWORD=changeme
+DB_HOST=localhost
+DB_DATABASE=db_name
+DB_USER=db_user
+DB_PASSWORD=db_password
+DB_PORT=3306
 
 ### > Astrobin ###
 ASTROBIN_API_KEY=PutHereYourOwnApiKey
