--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -13,7 +13,12 @@ doctrine:
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
-        url: '%env(DATABASE_URL)%'
+        #url: '%env(DATABASE_URL)%'
+        host: '%env(DB_HOST)%'
+        port: '%env(DB_PORT)%'
+        user: '%env(DB_USER)%'
+        password: '%env(DB_PASSWORD)%'
+        dbname: '%env(DB_DATABASE)%'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
