--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         api_entity_provider:
             entity:
                 class: App\Entity\ApiUser
-                property: username
+                property: email
 
     firewalls:
         dev:
@@ -51,5 +51,3 @@ security:
         - { path: ^/api/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY}
-
-
