--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/flex": "^1.1",
         "symfony/form": "^4.2",
         "symfony/framework-bundle": "^4.2",
+        "symfony/http-client": "4.3.*",
         "symfony/intl": "^4.2",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
