Fix register and authentication

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,10 +23,12 @@ security:
             pattern: ^/api/auth/login
             stateless: true
             anonymous: true
+            provider: api_entity_provider
             json_login:
                 check_path: /api/auth/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                require_previous_session: false
         api:
             pattern:  ^/api
             stateless: true
