--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
             - TERM=xterm-color
         working_dir: /var/www/deep-space-objects
         links:
-          - maildev
+          - smtp
         networks:
           - dso_stack
 
@@ -101,13 +101,12 @@ services:
           - dso_stack
 
     #SMTP
-    maildev:
-        image: djfarrelly/maildev
+    smtp:
+        image: bytemark/smtp
         container_name: dso_mail
-        hostname: maildev
-        ports:
-            - 1080:80
-            - 1025:25
+        restart: always
+        environment:
+            RELAY_HOST: smtp.otter-in-space.local
         networks:
           - dso_stack
 
