Add mail container docker + fix mail configuration

--- a/.env.dist
+++ b/.env.dist
@@ -22,6 +22,7 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database/${MYSQL_DATABASE}
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
+SENDER_MAIL=mail@example.com
 ###< symfony/swiftmailer-bundle ###
 
 # DOCKER
