--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "vue-template-compiler": "^2.6.10",
         "vue2-autocomplete-js": "^0.2.2",
         "vue2-leaflet": "^2.1.1",
+        "vue2-simplert-plugin": "0.4.1",
         "vue2-touch-events": "^1.1.2"
-    }
+    },
+    "version": "0.0.0"
 }
