Bugfix AstrobinId could be ot alphanumeric type

--- a/config/elasticsearch/mappings/deepspaceobjects.mapping.json
+++ b/config/elasticsearch/mappings/deepspaceobjects.mapping.json
@@ -116,7 +116,7 @@
               "type": "text"
             },
             "astrobin_id": {
-              "type": "integer"
+              "type": "text"
             }
           }
         },
