Change nginx conf

--- a/docker/nginx/symfony.prod.https.conf
+++ b/docker/nginx/symfony.prod.https.conf
@@ -1,14 +1,14 @@
 server {
 	listen 80;
 	listen [::]:80;
-
+    server_name _server;
     return 301 https://$server_name$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl;
-    server_name astro-otter.space;
+    server_name _server;
 
     root /var/www/deep-space-objects/public;
     index index.php
@@ -43,18 +43,16 @@ server {
     #########################
     # Certificate
     # Lets encrypt
-    ssl_certificate /etc/letsencrypt/live/astro-otter.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/astro-otter.space/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/astro-otter.space/chain.pem;
+    ssl_certificate /path/to/letsencrypt/live/fullchain.pem;
+    ssl_certificate_key /path/to/letsencrypt/live/privkey.pem;
+    ssl_trusted_certificate /path/to/letsencrypt/live/chain.pem;
 
     # SSL Protocols
-    ssl_protocols TLSv1.2 TLSv1.1 TLSv1
-
-    # DH
-    ssl_dhparam /etc/nginx/dh.pem;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
     # ECDH
-    ssl_ecdh_curve secp384r1;
+    ssl_dhparam /etc/nginx/ssl/dh.pem;
+    ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
 
     # Ciphers
     ssl_ciphers EECDH+AESGCM:EECDH+CHACHA20:EECDH+AES;
