--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,26 +1,14 @@
 monolog:
     handlers:
         main:
-            type: rotating_file
+            type:  rotating_file
+            path:  '%kernel.logs_dir%/%kernel.environment%.log'
             action_level: error
-            handler: nested
-            max_files: 8
+            max_files: 10
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
-        nested:
-            type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
-            level: error
         console:
             type: console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine"]
-#        deprecation:
-#            type: stream
-#            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
-#        deprecation_filter:
-#            type: filter
-#            handler: deprecation
-#            max_level: info
-#            channels: ["php"]
