--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -4,6 +4,7 @@ monolog:
             type:  rotating_file
             path:  '%kernel.logs_dir%/%kernel.environment%.log'
             action_level: error
+            level: error
             max_files: 10
         console:
             type: console
