--- a/.env.dist
+++ b/.env.dist
@@ -23,6 +23,9 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database/${MYSQL_DATABASE}
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 SENDER_MAIL=mail@example.com
+GMAIL_MAIL=
+GMAIL_LOGIN=
+GMAIL_APP_PWD=
 ###< symfony/swiftmailer-bundle ###
 
 # DOCKER
