--- a/.env.dist
+++ b/.env.dist
@@ -55,7 +55,7 @@ ASTROBIN_API_SECRET=PutHereYourOwnApiSecret
 GITHUB_PAGE=https://github.com/HamHamFonFon/deep-space-objects
 PAYPAL_PAGE=
 FACEBOOK_PAGE=
-TWOITTER_PAGE=
+TWITTER_PAGE=
 ### > NASA APOD ###
 NASA_API_KEY=PutHereApiKey
 ### < NASA APOD ###
