Remove SwiftMailer and add Mailer component

--- a/.env.dist
+++ b/.env.dist
@@ -22,10 +22,6 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database/${MYSQL_DATABASE}
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
-SENDER_MAIL=mail@example.com
-GMAIL_MAIL=
-GMAIL_LOGIN=
-GMAIL_APP_PWD=
 ###< symfony/swiftmailer-bundle ###
 
 # DOCKER
@@ -81,3 +77,16 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=4a651bce78ab05a0211ab3c97b355760
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+SENDER_MAIL=
+GMAIL_MAIL=
+GMAIL_LOGIN=
+GMAIL_APP_PWD=
+###< symfony/google-mailer ###
