--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "symfony/flex": "^1.1",
         "symfony/form": "^4.2",
         "symfony/framework-bundle": "^4.2",
+        "symfony/google-mailer": "4.4.*",
         "symfony/http-client": "4.3.*",
         "symfony/intl": "^4.2",
+        "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "4.4.*",
