--- a/config/services.yaml
+++ b/config/services.yaml
@@ -91,7 +91,7 @@ services:
         tags:
             -
                 name: doctrine.orm.entity_listener
-                entity: App\Entity\ApiUser
+                entity: App\Entity\BDD\ApiUser
                 lazy: true
 
     # add more service definitions when explicit configuration is needed
