Add twitter meta

--- a/.env.dist
+++ b/.env.dist
@@ -52,6 +52,7 @@ GITHUB_PAGE=https://github.com/HamHamFonFon/deep-space-objects
 PAYPAL_PAGE=
 FACEBOOK_PAGE=
 TWITTER_PAGE=
+TWITTER_ACCOUNT=
 ### > NASA APOD ###
 NASA_API_KEY=PutHereApiKey
 ### < NASA APOD ###
