--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,3 +5,4 @@ twig:
     globals:
         favicon: /favicon.ico
         facebookId: '%env(FACEBOOK_APP_ID)%'
+        twitter_name: '%env(TWITTER_ACCOUNT)%'
