--- a/.env.dist
+++ b/.env.dist
@@ -72,7 +72,7 @@ GOOGLE_PUBLIC=
 GOOGLE_SECRET=
 FACEBOOK_APP_ID=
 FACEBOOK_SECRET_ID=
-
+FACEBOOK_TOKEN=
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
