Test command facebook

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "excelwebzone/recaptcha-bundle": "^1.5",
+        "facebook/graph-sdk": "^5.7",
         "friendsofsymfony/rest-bundle": "^2.5",
         "hamhamfonfon/astrobin-ws": "^1.0",
         "jms/serializer-bundle": "^3.3",
