--- a/.env.dist
+++ b/.env.dist
@@ -73,6 +73,7 @@ GOOGLE_SECRET=
 FACEBOOK_APP_ID=
 FACEBOOK_SECRET_ID=
 FACEBOOK_TOKEN=
+FACEBOOK_PAGE_ID=
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
