add twitter keys

--- a/.env.dist
+++ b/.env.dist
@@ -74,6 +74,10 @@ FACEBOOK_APP_ID=
 FACEBOOK_SECRET_ID=
 FACEBOOK_TOKEN_CLIENT=
 FACEBOOK_PAGE_ID=
+TWITTER_OAUTH_ACCESS_TOKEN=
+TWITTER_OAUTH_ACCESS_TOKEN_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
