--- a/config/services.yaml
+++ b/config/services.yaml
@@ -89,7 +89,14 @@ services:
             $appId: '%env(FACEBOOK_APP_ID)%'
             $appSecret: '%env(FACEBOOK_SECRET_ID)%'
             $pageId: '%env(FACEBOOK_PAGE_ID)%'
-
+    App\Service\SocialNetworks\WebServices\TwitterWs:
+        autowire: true
+        autoconfigure: true
+        bind:
+            $consumerKey: '%env(TWITTER_CONSUMER_KEY))%'
+            $consumerSecretKey: '%env(TWITTER_CONSUMER_SECRET))%'
+            $accessToken: '%env(TWITTER_OAUTH_ACCESS_TOKEN))%'
+            $accessTokenSecret: '%env(TWITTER_OAUTH_ACCESS_TOKEN_SECRET))%'
 
     # Exception listener
     App\EventListener\ExceptionListener:
