--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "abraham/twitteroauth": "^1.1",
         "excelwebzone/recaptcha-bundle": "^1.5",
         "facebook/graph-sdk": "^5.7",
         "friendsofsymfony/rest-bundle": "^2.5",
