--- a/config/elasticsearch/mappings/deepspaceobjects.mapping.json
+++ b/config/elasticsearch/mappings/deepspaceobjects.mapping.json
@@ -79,6 +79,39 @@
                 }
               }
             },
+            "description": {
+              "properties": {
+                "description" :{
+                  "type": "text",
+                  "fields": {
+                    "en": {
+                      "type": "text",
+                      "analyzer": "english"
+                    },
+                    "fr": {
+                      "type": "text",
+                      "analyzer": "french"
+                    },
+                    "es": {
+                      "type": "text",
+                      "analyzer": "spanish"
+                    },
+                    "de": {
+                      "type": "text",
+                      "analyzer": "german"
+                    },
+                    "pt": {
+                      "type": "text",
+                      "analyzer": "portuguese"
+                    },
+                    "it": {
+                      "type": "text",
+                      "analyzer": "italian"
+                    }
+                  }
+                }
+              }
+            },
             "type": {
               "type": "text",
               "fields": {
