Add filters on map

--- a/config/elasticsearch/mappings/events.mapping.json
+++ b/config/elasticsearch/mappings/events.mapping.json
@@ -39,7 +39,7 @@
           "type": "integer"
         },
         "public": {
-          "type": "integer"
+          "type": "text"
         },
         "number_entrant": {
           "type": "integer"
