--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "sass-mq-build": "^1.0.0",
         "vue": "^2.6.10",
         "vue-agile": "^0.3.7",
+        "vue-backtotop": "^1.6.1",
         "vue-burger-menu": "^2.0.2",
         "vue-flux": "^5.1.9",
         "vue-i18n": "^8.12.0",
