Ass tipeee link

--- a/.env.dist
+++ b/.env.dist
@@ -53,6 +53,7 @@ PAYPAL_PAGE=
 FACEBOOK_PAGE=
 TWITTER_PAGE=
 TWITTER_ACCOUNT=
+TIPEEE_PAGE=
 ### > NASA APOD ###
 NASA_API_KEY=PutHereApiKey
 ### < NASA APOD ###
