Add refresh token

--- a/.env.dist
+++ b/.env.dist
@@ -83,6 +83,7 @@ TWITTER_CONSUMER_SECRET=
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=4a651bce78ab05a0211ab3c97b355760
+JWT_TTL=2592000
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
