--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,6 @@ api_auth_login:
     path: /api/auth/login
     methods:  [POST]
 
+gesdinet_jwt_refresh_token:
+    path:       /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
