--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
+        api_refresh:
+            pattern:  ^/api/token/refresh
+            stateless: true
+            anonymous: true
         api:
             pattern:  ^/api
             stateless: true
@@ -46,4 +50,5 @@ security:
     access_control:
         - { path: ^/api/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY}
