--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "d3-celestial": "0.6.10",
         "flatpickr": "^4.6.2",
         "leaflet": "^1.5.0",
+        "mobile-device-detect": "^0.4.3",
         "node-sass": "^4.12.0",
         "sass-loader": "^7.0.1",
         "sass-mq-build": "^1.0.0",
